# AMF

./: .gitattributes  .gitignore  .gitmodules  jenkinsfile
amf/: .gitignore
amf/public/common/: AMFFactory.cpp  AMFFactory.h  AMFSTL.cpp  CurrentTimeImpl.h  PropertyStorageImpl.h  Thread.h  TraceAdapter.cpp
amf/public/common/Linux/: ThreadLinux.cpp
amf/public/common/Unix/: ThreadUnix.cpp
amf/public/include/core/: Buffer.h  Compute.h  ComputeFactory.h  Context.h  Data.h  Factory.h
amf/public/proj/: .gitignore
amf/public/proj/Qt/: AMF_dev.pro
amf/public/proj/Qt/AMF/: AMF.pro
amf/public/proj/Qt/AMF_test/: AMF_test.pro  main.cpp  main_metal.cpp
amf/public/proj/cmake/: .gitignore  CMakeLists.txt  generate-loader-linux.sh  generate-loader-mac.sh  generate-loader-vs2017.bat  generate-shared-linux.sh  generate-shared-mac.sh  generate-shared-vs2017.bat  generate-static-mac.sh  generate-static-vs2017.bat
amf/public/proj/cmake/mac-gnumake/: CMakeCache.txt  Makefile  cmake_install.cmake
amf/public/proj/cmake/samples/: CMakeLists.txt
amf/public/proj/metal_issue_queue_flushing/: CMakeLists.txt  generate-mac-static.sh  generate-xcode-static.sh  issue_sample.cpp  run.sh
amf/public/proj/samples/: CMakeLists.txt  generate-mac-shared.sh  generate-shared-vs2017.bat  generate-static-vs2017.bat  generate-static-vs2019.bat  generate_mac.sh  main.cpp  run.sh
amf/public/proj/samples_metal/: CMakeLists.txt  build_mac.sh  generate-mac-static.sh  generate-xcode-static.sh  generate_mac.sh  main_metal.cpp
amf/public/samples/CPPSamples/common/: OpenCLLoader.cpp
amf/public/samples/SamplesC/common/: TraceAdapterC.c
amf/public/src/core/: AMFComputeFactoryMetal.cpp  AMFComputeFactoryMetal.h  AMFComputeKernelMetal.cpp  AMFComputeKernelMetal.h  AMFConsoleTraceWriter.cpp  AMFConsoleTraceWriter.h  AMFDeviceMetalImpl.cpp  AMFDeviceMetalImpl.h  AMFFileTraceWriter.cpp  AMFFileTraceWriter.h  BufferImpl.cpp  BufferImpl.h  ComputeOCL.cpp  ComputeOCL.h  ContextImpl.cpp  ContextImpl.h  DataImpl.cpp  DataImpl.h  DebugImpl.cpp  DebugImpl.h  Device.h  DeviceHostImpl.cpp  DeviceHostImpl.h  DeviceImpl.cpp  DeviceImpl.h  DeviceOCLImpl.cpp  DeviceOCLImpl.h  FactoryImpl.cpp  FactoryImpl.h  PlaneImpl.cpp  PlaneImpl.h  ProgramsImpl.cpp  ProgramsImpl.h  SurfaceImpl.cpp  SurfaceImpl.h  TraceImpl.cpp  TraceImpl.h
amf/public/src/core/metal/: AMFComputeKernelMetal.h  AMFComputeKernelMetal.mm  AMFDeviceMetal.h  AMFDeviceMetal.mm  CMakeLists.txt  MetalCompute.h  MetalCompute.mm  MetalComputeKernel.h  MetalComputeKernel.mm  MetalComputeKernelWrapper.h  MetalComputeKernelWrapper.mm  MetalComputeWrapper.h  MetalComputeWrapper.mm  MetalDevice.h  MetalDevice.mm  MetalDeviceEnumerator.h  MetalDeviceEnumerator.mm  MetalDeviceEnumeratorWrapper.h  MetalDeviceEnumeratorWrapper.mm  MetalDeviceWrapper.h  MetalDeviceWrapper.mm  env.sh  main.mm
amf/public/src/core/metal/testWrapper/: CMakeLists copy.txt  CMakeLists.txt  generate_mac.sh  main.mm  main_metal.cpp  process.metal  run.sh
